# aloha_backend

./: .env  .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
configuration/: base.toml  development.toml  local.toml  production.toml  route.toml
migrations/: 20250329154218_tweet.down.sql  20250329154218_tweet.up.sql
src/: api_doc.rs  configuration.rs  error.rs  lib.rs  startup.rs
src/dto/: pagination.rs  query.rs  response.rs
src/mappers/: group_permission.rs  mod.rs  permission.rs  tweet.rs  user.rs  user_group.rs  user_permission.rs
src/models/: group_permission.rs  mod.rs  permission.rs  tweet.rs  user.rs  user_group.rs  user_permission.rs
src/routes/: auth.rs  group_permission.rs  health_check.rs  mod.rs  permission.rs  tweet.rs  user.rs  user_group.rs  user_permission.rs
tests/: helpers.rs  main.rs
tests/api/: health_check.rs  mod.rs
tests/mappers/: mod.rs  tweet.rs  user.rs  user_group.rs  user_permission.rs
tests/routes/: auth.rs  group_permission.rs  health_check.rs  mod.rs  permission.rs  tweet.rs  user.rs  user_group.rs  user_permission.rs
