[package]
name = "aloha_backend"
version = "0.1.0"
edition = "2021"
default-run = "server"
[lib]
path = "src/lib.rs"
[[bin]]
name = "sql"
[[bin]]
name = "server"

[dependencies]
actix-web = { version = "4" }
tracing-actix-web = "0.7.16"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
serde = "1.0.219"
chrono = { version = "0.4.40", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.6.0"
wiremock = "0.6.3"
reqwest = { version = "0.12.15", features = ["cookies", "json"] }
once_cell = "1.21.3"
anyhow = "1.0.97"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies", "sessions"] }
actix-session = { version = "0.10.1", features = ["redis-session"] }
config = "0.15.11"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
argon2 = { version = "0.5.3", features = ["std"] }
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "env-filter"] }
actix-cors = "0.7.1"
